k8s/metrics-changelog/ingress.yml
#@ load("@ytt:data", "data")
#! https://github.com/k14s/ytt/blob/master/examples/data-values/config.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    #! cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  tls:
  - hosts:
    - #@ data.values.fqdn
    secretName: #@ data.values.name + "-acme-tls"
  rules:
  - host: #@ data.values.fqdn
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
